unpackaged/main/default/objects/CMPL123__RAR_Target_User_Test_object__c/CMPL123__RAR_Target_User_Test_object__c.object-meta.xml
<CustomObject>
    <label>RAR Target User Test object</label>
    <nameField>
        <label>RAR Target User Test object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RAR Target User Test objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>