unpackaged/main/default/objects/CMPL123__RAR_Target_User_Test_object__c/fields/CMPL123__RAR_Target_Test_Object__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__RAR_Target_Test_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RAR Target Test Object</label>
        <referenceTo>CMPL123__RAR_Target_Test_Object__c</referenceTo>
        <relationshipLabel>RAR Target User Test objects</relationshipLabel>
        <relationshipName>RAR_Target_User_Test_objects</relationshipName>
        <type>Lookup</type>
    </CustomField>