unpackaged/main/default/objects/CMPL123__RAR_Target_User_Test_object__c/fields/CMPL123__Test_Field__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Test_Field__c</fullName>
        <label>Test Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>