unpackaged/main/default/objects/CMPL123__RAR_Target_User_Test_object__c/fields/CMPL123__User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RAR_Target_User_Test_objects</relationshipName>
        <type>Lookup</type>
    </CustomField>